[internal] ui scaffholding

--- a/src/main/resources/assets/jsst/lang/en_us.json
+++ b/src/main/resources/assets/jsst/lang/en_us.json
@@ -1,11 +1,13 @@
 {
   "jsst.title": "Jack's Server Side Tweaks",
-  "jsst.bannerWriter.disabled": "This feature is disabled.",
+  "jsst.feature.disabled": "This feature is disabled.",
   "jsst.bannerWriter.started": "Started Banner Writer: '%s'",
   "jsst.bannerWriter.bossbar": "Currently writing: %s",
   "jsst.bannerWriter.unsupportedCharacters": "Unsupported characters in message: %s",
   "jsst.bannerWriter.invalidBanner": "No blank banners in main hand.",
   "jsst.bannerWriter.noText": "Can't use the banner writer with a blank string.",
+  "jsst.itemEditor": "Item Editor",
+  "jsst.itemEditor.noItem": "No item in hand/selected.",
   "jsst.config.enabled": "Enabled",
   "jsst.config.bannerWriter": "Banner Writer",
   "jsst.config.bannerWriter.description": "Adds a command allowing players to write out text on banners easily.",
